@@ -1,3 +1,9 @@
+2004-12-08  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* sample/Makefile.am: Readded TestVfs.cs back and make it conditional.
+	* sample/TestVfs.cs: New sample contributed by Tamara Roberson.
+	[Fixes #70262]
+
 2004-12-07  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/glue/style.c : add missing method and prototype. [Fixes #70216]
